File was updated.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta cherset="UTF-8">
 </head>
 <body>
-  <h1>京都大学体育会自動車部</h1>
   <div class="mainContent">
+    <h1>京都大学体育会自動車部</h1>
     <p>京都大学体育会自動車部へようこそ</p>
+    <h2>活動日</h2>
+    <p>毎週金曜日午後6:00～</p>
   </div>
 </body>
 </html>
