Link list was added in index.html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta cherset="UTF-8">
 </head>
 <body>
+  <div class="sideBar">
+    <ul>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
+  </div>
   <div class="mainContent">
     <h1>京都大学体育会自動車部</h1>
     <p>京都大学体育会自動車部へようこそ</p>
