--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 <body>
   <div class="sideBar">
     <ul>
-      <li><a href="">aaa</a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="./welcome.html">自動車部とは？</a></li>
+      <li><a href="./ob.html">OB体験談</a></li>
+      <li><a href="./activities.html">年間行事予定</a></li>
+      <li><a href="./members.html"></a>部員紹介</li>
+      <li><a href="./photo.html"></a>写真館</li>
+      <li><a href="./servicing.html">技術情報</a></li>
+      <li><a href="./link.html">LINK</a></li>
+      <li><a href="mailto:rmc-kuac@mail.goo.ne.jp">E-MAIL</a></li>
     </ul>
+    <p class="sponsers">
+      Sponsors:　株式会社山中商会様
+    </p>
   </div>
   <div class="mainContent">
     <h1>京都大学体育会自動車部</h1>
